@@ -27,7 +27,7 @@ class Config(object):
 	recv_chunk = 4096
 	list_md5 = False
 	human_readable_sizes = False
-	extra_headers = SortedDict()
+	extra_headers = SortedDict(ignore_case = True)
 	force = False
 	get_continue = False
 	skip_existing = False
